--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
-    <title>Austin Pennyfeather</title>
+    <title>Contact</title>
   </head>
-  <body id="bg-img">
+  <body id="alternatePages">
     <!-- <div class="overlay"></div> -->
     <header>
       <div class="menu-btn">
@@ -25,38 +25,32 @@
         <div class="menu-branding"><div class="portrait"></div></div>
 
         <ul class="menu-nav">
-          <li class="nav-item current">
+          <li class="nav-item">
             <a href="index.html" class="nav-link">Home</a>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item ">
             <a href="about.html" class="nav-link">About Me</a>
           </li>
 
-          <li class="nav-item">
+          <li class="nav-item current">
             <a href="contact.html" class="nav-link">Contact</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main id="home">
-      <h1 class="lg-heading">
-        Austin <span class="text-secondary">Pennyfeather</span>
-      </h1>
-      <h2 class="sm-heading">Web Developer, Programmer & Entrepreneur</h2>
-      <div class="icons">
-        <a href="https://twitter.com/Austinpennyfea1?lang=en">
-          <i class="fab fa-twitter fa-2x"></i>
-        </a>
-        <a href="https://github.com/pennyfea">
-          <i class="fab fa-github fa-2x"></i>
-        </a>
-        <a href="https://www.linkedin.com/in/austin-pennyfeather/">
-          <i class="fab fa-linkedin fa-2x"></i>
-        </a>
+    <main id="contact">
+      <h1 class="lg-heading">Contact<span class="text-secondary"> Me</span></h1>
+      <h2 class="sm-heading">Reach me here...</h2>
+      <div class="contact-boxes">
+        <div>
+          <span class="text-secondary">Email: </span>pennyfea@ualberta.ca
+        </div>
+        <div><span class="text-secondary">Phone: </span>(780) 667 4980</div>
       </div>
     </main>
 
+    <footer id="main-footer">Copyright &copy; 2018</footer>
     <script src="js/main.js"></script>
   </body>
 </html>
